# danish-power-data-pipeline

./: .gitignore  README.md
.github/workflows/: ci.yml
dashboard/: Dockerfile  app.py  components.py  db.py  municipalities.py  population.py  queries.py  requirements.txt  theme.py
dashboard/assets/: style.css
dashboard/data/: README.md  kommuner.geojson
dashboard/pages/: consumption.py  insights.py  prices.py  wind_co2.py
energy_etl/: .dockerignore  README.md  pyproject.toml
energy_etl/db/: analytics.sql  schema.sql
energy_etl/deploy/: Dockerfile  dagster.yaml  workspace.yaml
energy_etl/energy_etl/: assets.py  definitions.py  ml.py
energy_etl/energy_etl/models/: model_2026-07-17.txt  model_2026-07.txt
energy_etl/energy_etl_tests/: test_assets.py
energy_etl/scripts/: backfill.sh
ml/: README.md  backtest.py  baselines.sql  error_analysis.py  requirements.txt  train.py
