[project]
name = "energy_etl"
version = "0.1.0"
description = "Dagster + TimescaleDB pipeline for Danish electricity data (prices, wind/solar, CO2, consumption)"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-postgres",
    "psycopg2-binary",
    "requests",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "energy_etl.definitions"
code_location_name = "energy_etl"
